# OpenGL

./: CMakeLists.txt
res/shaders/: shader.frag  shader.vert  skybox.frag  skybox.vert
src/: Camera.cpp  Camera.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  Texture.cpp  Texture.hpp  main.cpp
